--- a/playbooks/oracle_restore_points/flashback_primary_restore_points.yml
+++ b/playbooks/oracle_restore_points/flashback_primary_restore_points.yml
@@ -23,7 +23,10 @@
   shell: /tmp/flashback_database_rman.sh
   environment:
     RESTORE_POINT_NAME: "{{ restore_point_name }}"
-    CATALOG_CONNECTION: "{{ connect_to_catalog }}"
+    CATALOG: "{{ catalog }}"
+    ASSUME_ROLE_NAME: "{{ assume_role_name }}"
+    SECRET_ACCOUNT_ID: "{{ secret_account_id }}"
+    SECRET: "{{ secret }}"
   vars:
     ansible_aws_ssm_timeout: 14400
   async: 14400
