--- a/playbooks/oracle_restore_points/backup_archivelogs_for_restore_point.yml
+++ b/playbooks/oracle_restore_points/backup_archivelogs_for_restore_point.yml
@@ -17,7 +17,7 @@
   when: getrequiredarchivelogsequences.stdout_lines[-1] != ','
   environment:
     RESTORE_POINT_NAME: "{{ uplift_restore_point_name | default(restore_point_name) }}"
-    CATALOG: "{{ catalog }}"
+    CATALOG: "{{ catalog | default() }}"
     ASSUME_ROLE_NAME: "{{ assume_role_name }}"
     SECRET_ACCOUNT_ID: "{{ secret_account_id }}"
     SECRET: "{{ secret }}"
