--- a/playbooks/oracle_restore_points/playbook.yml
+++ b/playbooks/oracle_restore_points/playbook.yml
@@ -116,10 +116,6 @@
         - (restore_point_name | default('') | length ) == 0
         - (required_action == "Create Restore Point") or (required_action == "Drop Restore Point") or (required_action == "Flashback to Restore Point")
 
-    - name: Default catalog
-      set_fact:
-        catalog: ""
-
     # Get the RMAN Catalog details if creating a restore point to ensure
     # we backup any archive logs which will be needed.  (Or to unkeep the backup if dropping the restore point)
     # (A Guaranteed Restore Point does NOT guarantee that archivelogs will be retained, so we need to ensure
@@ -138,7 +134,7 @@
           when: database_primary_sid is defined
           script: check_database_registered.sh {{ database_primary_unique }}
           environment:
-            CATALOG: "{{ catalog }}"
+            CATALOG: "{{ catalog | default() }}"
             ASSUME_ROLE_NAME: "{{ assume_role_name }}"
             SECRET_ACCOUNT_ID: "{{ secret_account_id }}"
             SECRET: "{{ secret }}"
@@ -267,7 +263,7 @@
               - ( database_registered.stdout_lines is defined and database_registered.stdout_lines[0] | int > 0) or (database_registered is not defined )
           environment:
             RESTORE_POINT_NAME: "{{ restore_point_name | upper }}"
-            CATALOG: "{{ catalog }}"
+            CATALOG: "{{ catalog | default() }}"
             ASSUME_ROLE_NAME: "{{ assume_role_name }}"
             SECRET_ACCOUNT_ID: "{{ secret_account_id }}"
             SECRET: "{{ secret }}"
