--- a/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/modify_metric_thresholds.yml
+++ b/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/modify_metric_thresholds.yml
@@ -53,7 +53,7 @@
         WARNING_THRESHOLD_UNSET_BUG=$(awk '/START_RECORD/{flag=1}/metric\s*,\s*db_alert_log$/{flag++}/^column\s*,\s*genericErrStack$/{flag++}/^warning_threshold\s*,\s*" "/{flag++}/END_RECORD/{if(flag==4){print "YES"}}' {{ stage }}/oem_threshold.txt)
         if [[ "{{ item.1.target_type}}" == "oracle_database" ]] && [[ "${WARNING_THRESHOLD_UNSET_BUG}" == "YES" ]]; then
            echo "Using workaround to unset Warning Threshold."
-           {{ emcli }} -modify_threshold -target_name={{ item.0.target_name }} -target_type={{ item.1.target_type }} \
+           {{ emcli }} modify_threshold -target_name={{ item.0.target_name }} -target_type={{ item.1.target_type }} \
               -metric="db_alert_log" -column="genericErrStack" -warning_threshold="" \
               -key_columns=";"
         fi
