--- a/playbooks/oracle_release_update/oracle_release_update/tasks/reinstall_osbws.yml
+++ b/playbooks/oracle_release_update/oracle_release_update/tasks/reinstall_osbws.yml
@@ -7,7 +7,7 @@
 
 - name: Check osbws config exists
   stat:
-    path: "{{ target_home }}/dbs/osbws_wallet"
+    path: '{{ target_home }}/dbs/osbws_wallet'
   register: osbws_config_exists
 
 # Release Update is not responsible for configuring OSBWS so only
@@ -15,9 +15,10 @@
 - name: Re-Install Only If OSBWS Already Configured
   when: osbws_config_exists.stat.exists
   block:
+
     - name: Check osbw installer exists
       stat:
-        path: "{{ target_home }}/lib/osbws_installer.zip"
+        path: '{{ target_home }}/lib/osbws_installer.zip'
       register: installer_exists
 
     - name: fail when installer not present
@@ -42,7 +43,7 @@
         cd {{ target_home }}/dbs
         cp -r osbws_wallet osbws_wallet.bak
       register: backup_output
-
+      
     - name: Show Output from Backup osbws_wallet folder
       debug: var=backup_output.failed
 
@@ -51,6 +52,7 @@
         cd {{ target_home }}/dbs
         grep IAM_ROLE osbws.ora | cut -d'=' -f2
       register: get_IAM_role
+      changed_when: false
 
     - name: Set IAM Role
       set_fact:
@@ -63,7 +65,12 @@
       shell: |
         . ~oracle/.bash_profile
         cd {{ target_home }}/dbs
-        ${ORACLE_HOME}/jdk/bin/java -jar {{ target_home }}/lib/osbws_install.jar -IAMRole {{ iam_role }} -walletDir {{ target_home }}/dbs/osbws_wallet -libDir {{ target_home }}/lib/ -useHttps
+        JAVA_HOME={{ target_home }}/jdk/jre
+        PATH=$PATH:$JAVA_HOME/bin
+        java -jar {{ target_home }}/lib/osbws_install.jar -IAMRole {{ iam_role }} \
+         -walletDir {{ target_home }}/dbs/osbws_wallet -libDir {{ target_home }}/lib/ \
+         -location {{ region }} -awsEndpoint s3-{{ region }}.amazonaws.com \
+         -useHttps
       register: install_output
 
     - name: Show Output from Install OSBWS Library
