--- a/playbooks/oracle_release_update/oracle_release_update/tasks/switch_clone.yml
+++ b/playbooks/oracle_release_update/oracle_release_update/tasks/switch_clone.yml
@@ -1,4 +1,5 @@
 ---
+
 # Kill any remaining old sqlplus sessions as these can cause upgrade to fail
 - name: Kill sqlplus
   shell: pkill sqlplus
@@ -12,20 +13,20 @@
   failed_when: pkilldgmgrl.rc > 1
 
 - name: Create AWS Snapshot of Primary Host Prior to Switching to Clone
-  include_role:
-    name: aws-snapshot
-  when:
-    - keep_aws_snapshot | default('No AWS Snapshot') != 'No AWS Snapshot'
-    - database_role == 'primary'
+  include_role: 
+     name: aws-snapshot
+  when: 
+     - keep_aws_snapshot | default('No AWS Snapshot') != 'No AWS Snapshot'
+     - database_role == 'primary'
   vars:
-    target_host: "{{ inventory_hostname }}"
-    delete_after_days: "{{ keep_aws_snapshot }}"
+     target_host: "{{ inventory_hostname }}"
+     delete_after_days: "{{ keep_aws_snapshot }}"
 
 # Allow up to 1 hour to perform the switch (should be faster than that, but we want to stop Ansible re-trying needlessly)
 - name: Switch Home from {{ source_home }} to {{ target_home }}
   shell: |
-    . ~oracle/.bash_profile
-    {{ source_home }}/OPatch/opatchauto apply -oh {{ source_home }} -switch-clone
+          . ~oracle/.bash_profile
+          {{ source_home }}/OPatch/opatchauto apply -oh {{ source_home }} -switch-clone
   async: 3600
   poll: 0
   register: switch_clone
@@ -37,7 +38,7 @@
 
 - name: Wait for Switch Clone
   async_status:
-    jid: "{{ switch_clone.ansible_job_id }}"
+      jid: "{{ switch_clone.ansible_job_id }}"
   register: result
   until: result.finished
   retries: 120
@@ -49,4 +50,5 @@
     ansible_async_dir: /tmp/.ansible_async
 
 - name: Show Output of Switching to Clone
-  debug: var=result.stdout
+  debug:
+    var=result.stdout
