Checkout secret roles

--- a/.github/workflows/oracle-db-remove-orphan-backups.yml
+++ b/.github/workflows/oracle-db-remove-orphan-backups.yml
@@ -84,6 +84,18 @@ jobs:
           ref: ${{ github.event.inputs.SourceConfigVersion }}
           fetch-depth: 0
 
+      - name: Checkout Ansible Required Roles From modernisation-platform-configuration-management
+        uses: actions/checkout@v4
+        with:
+          repository: ministryofjustice/modernisation-platform-configuration-management
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            ansible/roles/secretsmanager-passwords
+            ansible/roles/get-modernisation-platform-facts
+          path: roles
+          ref: ${{ github.event.inputs.SourceConfigVersion }}
+          fetch-depth: 0
+
       - name: Configure AWS Credentials
         id: login-aws
         uses: aws-actions/configure-aws-credentials@v4
@@ -95,4 +107,5 @@ jobs:
       - name: Start Ansible Remove Orphaned Backups
         run: |
           export ANSIBLE_CONFIG=$ansible_config
+          ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_remove_orphan_backups/roles
           $command -i $inventory -e hosts=${{ steps.preparetargetname.outputs.TargetHost }} ${{ github.event.inputs.VerboseOutput }}
