--- a/playbooks/oracle_release_update/playbook.yml
+++ b/playbooks/oracle_release_update/playbook.yml
@@ -5,3 +5,13 @@
   become_user: oracle
   roles:
     - oracle_release_update
+
+- hosts: "{{ target_hosts }}"
+  gather_facts: no
+  become: yes
+  become_user: oracle
+  vars:
+          oracle_grid_new_oracle_home: "{{ hostvars.localhost.oem_gi_home }}"
+          oracle_database_new_oracle_home: "{{ hostvars.localhost.oem_db_home }}"
+  roles:
+     - { role: update_oem, when: apply_mode == 'switch-clone' and (hostvars.localhost.agent_connected | bool)}
