--- a/playbooks/oracle_release_update/update_oem/tasks/main.yml
+++ b/playbooks/oracle_release_update/update_oem/tasks/main.yml
@@ -1,8 +1,6 @@
 ---
+- name: Get SYSMAN Password
+  include_tasks: "{{ playbook_dir }}/../../common/tasks/get_facts.yml"
 
 - name: Update Targets
   include: update_agent_targets.yml
-  vars:
-     target_host: "{{ item }}"
-  loop: "{{ update_targets | default ( target_hosts.split(',') ) }}"
-
