--- a/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/modify_metric_thresholds.yml
+++ b/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/modify_metric_thresholds.yml
@@ -69,7 +69,7 @@
         echo "Setting scheduler state for {{ item.1.target_type }} {{ item.0.target_name }} {{ item.1.collection_name }}"
         {{ emcli }} modify_collection_schedule -targetNames={{ item.0.target_name }} -targetType={{ item.1.target_type }} \
               -collectionName={{ item.1.collection_name }} \
-              '-collectionStatus=' + item.1.collection_attribute_value \
+              -collectionStatus={{ item.1.collection_attribute_value }} \
               -preview=N -force
       loop: "{{ oem_targets | product(( all_oem_metrics | flatten_emcli_metrics('schedule') ) + ( host_oem_metrics | flatten_emcli_metrics('schedule') )) }}"
       when:
@@ -92,8 +92,8 @@
         echo "Setting scheduler frequency for {{ item.1.target_type }} {{ item.0.target_name }} {{ item.1.collection_name }}"
         {{ emcli }} modify_collection_schedule -targetNames={{ item.0.target_name }} -targetType={{ item.1.target_type }} \
               -collectionName={{ item.1.collection_name }} \
-              -freqType=' + item.1.collection_attribute_value.split(' ')[1] \
-              -freqValue=' + item.1.collection_attribute_value.split(' ')[0] \
+              -freqType={{ item.1.collection_attribute_value.split(' ')[1] }}\
+              -freqValue={{ item.1.collection_attribute_value.split(' ')[0] }}\
               -preview=N -force
       loop: "{{ oem_targets | product(( all_oem_metrics | flatten_emcli_metrics('schedule') ) + ( host_oem_metrics | flatten_emcli_metrics('schedule') )) }}"
       when:
