--- a/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/modify_metric_thresholds.yml
+++ b/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/modify_metric_thresholds.yml
@@ -99,7 +99,8 @@
       when:
         - item.0.target_type == item.1.target_type
         - (item.0.target_name == item.1.target_name) or (item.1.target_name == 'all')
-      register: enable_disable_collections
+        - item.1.collection_attribute == 'interval'
+      register: reschedule_collections
 
     - name: Setup Database Credentials
       include_tasks: configure_database_credentials.yml
