--- a/playbooks/oracle_release_update/oracle_release_update/tasks/main.yml
+++ b/playbooks/oracle_release_update/oracle_release_update/tasks/main.yml
@@ -222,6 +222,7 @@
 - name: Count Grid OOP Files
   shell: FILENAME={{ source_gi_home }}/.opatchauto_storage/$(hostname)/oopsessioninfo.ser && test -e $FILENAME && strings $FILENAME | tail -1 || echo "COMPLETED"
   register: gi_oop
+  changed_when: false
 
 - fail:
     msg: "Active OOP Session file exists for {{ source_gi_home }}"
@@ -297,6 +298,7 @@
      {{ emctl_agent }} status agent
   ignore_errors: true
   register: oem_agent_running
+  changed_when: false
 
 - name: Stop oem agent
   shell: |
@@ -376,6 +378,7 @@
      {{ emctl_agent }} status agent
   ignore_errors: true
   register: oem_agent_running
+  changed_when: false
 
 - name: Start oem agent
   shell: |
@@ -392,20 +395,6 @@
   when: apply_mode == 'switch-clone'
   block:
 
-      # - name: Check if inside AWS.
-      #   uri:
-      #     url: http://169.254.169.254/latest/meta-data
-      #     timeout: 20
-      #   register: aws_uri_check
-      #   failed_when: false
-      #   run_once: yes
-
-      # - set_fact:
-      #     is_aws_environment: "{{ aws_uri_check.status == 200 }}"
-      #   run_once: yes
-      #   delegate_to: localhost
-      #   delegate_facts: true
-
       # Check if Oracle Primary OEM Agent is Installed And Communicating with OMS
       - name: Check if Oracle OEM Agent Operating
         shell: |
@@ -415,16 +404,6 @@
         run_once: yes
         ignore_errors: true
         changed_when: false
-
-      # - name: Prepare Ansible Controller Variables for OEM Target Update
-      #   set_fact:
-      #      oem_gi_home: "{{ target_gi_home }}"
-      #      oem_db_home: "{{ target_db_home }}"
-      #      switched_targets: "{{ ansible_play_hosts }}"
-      #      agent_connected: "{{ not pingoms.failed }}"
-      #   delegate_to: localhost
-      #   delegate_facts: true  
-      #   run_once: yes
 
 # Re-Enabling FSFO May Be Done at 3 Points:
 #  (a) After a Switch Clone Completes on a Standby Database
